fix: horizontal overflow/scan issue

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
   border-radius: 5px;
   background-color: white;
   height: 78vh;
-  min-width: 120vh;
+  width: 90%;
   overflow-y: scroll;
   overflow-x: hidden;
 }
